--- a/index.html
+++ b/index.html
@@ -261,38 +261,39 @@
 
                 </div>
             </div>
-        </section <section id="social">
-        <div class="container">
-            <h2 class="section-title" style="text-align:center;">Присоединяйтесь в моих пространствах</h2>
-            <p style="max-width: 520px; margin: 0 auto 24px; text-align:center; font-size:0.95rem; opacity:0.9;">
-                Я делюсь раскладами, мыслями о внутренней силе и поддержкой для тех, кто проживает сложные периоды и
-                выбирает новую жизнь.
-            </p>
-            <div class="social-grid">
-                <a class="social-card" href="https://instagram.com/_the_sun_tarot" target="_blank" rel="noopener">
-                    <div class="social-icon">IG</div>
-                    <div>
-                        <div class="social-label">Instagram</div>
-                        <div class="social-handle">@_the_sun_tarot</div>
-                    </div>
-                </a>
-                <a class="social-card" href="https://www.tiktok.com/@truesuria" target="_blank" rel="noopener">
-                    <div class="social-icon">TT</div>
-                    <div>
-                        <div class="social-label">TikTok</div>
-                        <div class="social-handle">@truesuria</div>
-                    </div>
-                </a>
-                <a class="social-card" href="https://www.t.me/tarotmystic" target="_blank" rel="noopener">
-                    <div class="social-icon">TG</div>
-                    <div>
-                        <div class="social-label">Telegram</div>
-                        <div class="social-handle">Милая, иди обниму</div>
-                    </div>
-                </a>
+        </section>
+        <section id="social">
+            <div class="container">
+                <h2 class="section-title" style="text-align:center;">Присоединяйтесь в моих пространствах</h2>
+                <p style="max-width: 520px; margin: 0 auto 24px; text-align:center; font-size:0.95rem; opacity:0.9;">
+                    Я делюсь раскладами, мыслями о внутренней силе и поддержкой для тех, кто проживает сложные периоды и
+                    выбирает новую жизнь.
+                </p>
+                <div class="social-grid">
+                    <a class="social-card" href="https://instagram.com/_the_sun_tarot" target="_blank" rel="noopener">
+                        <div class="social-icon">IG</div>
+                        <div>
+                            <div class="social-label">Instagram</div>
+                            <div class="social-handle">@_the_sun_tarot</div>
+                        </div>
+                    </a>
+                    <a class="social-card" href="https://www.tiktok.com/@truesuria" target="_blank" rel="noopener">
+                        <div class="social-icon">TT</div>
+                        <div>
+                            <div class="social-label">TikTok</div>
+                            <div class="social-handle">@truesuria</div>
+                        </div>
+                    </a>
+                    <a class="social-card" href="https://www.t.me/tarotmystic" target="_blank" rel="noopener">
+                        <div class="social-icon">TG</div>
+                        <div>
+                            <div class="social-label">Telegram</div>
+                            <div class="social-handle">Милая, иди обниму</div>
+                        </div>
+                    </a>
 
+                </div>
             </div>
-        </div>
         </section>
 
         <section id="contact">
