--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                                     к
                                     себе.
                                 </p>
-                                <a href="#contact" class="product-link">Получить медитации</a>
+                                <a href="meditations.html" class="product-link">learn about медитации</a>
                             </article>
                         </div>
                     </div>
@@ -393,7 +393,7 @@
                     </a>
                 </div>
                 <div>
-                    <form action="https://formspree.io/f/xzzlvakj" method="POST">
+                    <form action="https://formspree.io/f/mgowdgyd" method="POST">
                         <div>
                             <label for="name">Имя</label>
                             <input id="name" type="text" name="name" placeholder="Ваше имя" required>
@@ -423,6 +423,7 @@
                 <a href="#top">Вверх</a>
                 <a href="#about">Обо мне</a>
                 <a href="#services">Формат работы</a>
+                <a href="#services">testimonials</a>
                 <a href="#contact">Контакт</a>
             </div>
         </div>
