--- a/index.html
+++ b/index.html
@@ -4,19 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+
     <!-- Basic SEO -->
-    <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
-    <meta name="keywords"
-        content="Сурия, таро, таролог, таро-терапевт, энергетический практик, Стук сердца, сердцебиение души, трансформация, духовное исцеление">
-    <title>Сурия — энергетический практик и таро-терапевт 🖤 Стук сердца</title>
+    <title>Медитации Сурии — аудио-практики для исцеления души | Стук сердца</title>
 
     <meta name="description"
-        content="Сурия — энергетический практик и таро-терапевт. Стук сердца: путь трансформации души, расклады Таро и энергетическая поддержка для тех, кто проживает боль и ищет свет.">
+        content="Медитации Сурии: аудио-практики для отпускания боли прошлого, разрыва кармических связей, восстановления энергии и открытия сердца для любви. Выберите медитацию или готовый набор под своё состояние.">
 
-    <!-- Open Graph (for social preview) -->
-    <meta property="og:title" content="Сурия — энергетический практик и таро-терапевт 🖤 Стук сердца">
+    <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
+    <meta name="keywords"
+        content="медитации Сурии, аудио медитации, энергетические медитации, отпускание прошлого, разрыв кармической связи, защита рода, очищение от негатива, баланс энергии, опора внутри себя, призыв новой любви, Стук сердца">
+
+    <!-- Open Graph (social preview) -->
+    <meta property="og:title" content="Медитации Сурии — аудио-практики для исцеления души">
     <meta property="og:description"
-        content="«Стук сердца» — пространство, где через Таро и энергопрактики можно пройти боль, отпустить прошлое и услышать своё сердце заново.">
+        content="Пространство медитаций «Стук сердца»: готовые наборы и отдельные практики, которые помогают успокоить ум, отпустить прошлое, восстановить энергию и открыть сердце для новой любви.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://iuliiakonovalova.github.io/stukserdza/meditations.html">
+    <meta property="og:image"
+        content="https://iuliiakonovalova.github.io/stukserdza/images/suria-meditation-preview.jpg">
+    <meta property="og:locale" content="ru_RU">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://iuliiakonovalova.github.io/stukserdza/">
