--- a/meditations.html
+++ b/meditations.html
@@ -61,8 +61,8 @@
                 </div>
                 <div class="med-hero-photo-wrap">
                     <div class="med-hero-photo-circle">
-                        <img src="assets/images/suria-meditation.jpg" alt="Сурия проводит медитацию с закрытыми глазами"
-                            class="med-hero-photo">
+                        <img src="assets/images/suria-luxury-photo.jpg"
+                            alt="Сурия проводит медитацию с закрытыми глазами" class="med-hero-photo">
                     </div>
                 </div>
             </div>
