Add free meditation section

--- a/meditations.html
+++ b/meditations.html
@@ -68,6 +68,46 @@
             </div>
         </section>
 
+        <section id="free-meditation" class="med-free">
+            <div class="container med-free-inner">
+                <div class="med-free-text">
+                    <p class="med-free-badge">Бесплатная медитация</p>
+                    <h2 class="section-title">Медитация «Пробуждение женственности»</h2>
+                    <p class="med-free-lead">
+                        Милые, эта медитация — мягкое приглашение вспомнить о себе, своей нежности и природе
+                        женственности.
+                        Наденьте наушники, закройте глаза и позвольте себе просто быть.
+                    </p>
+                    <p class="med-free-body">
+                        Где-то глубоко внутри уже живёт источник вашей любви к себе. В этой практике вы мягко
+                        прикасаетесь к нему, наполняетесь гармонией и позволяете своей женственности сиять —
+                        без ожиданий и требований, только с принятием и теплом.
+                    </p>
+                    <!-- <a href="#contact" class="btn-primary">
+                        Забрать бесплатную версию
+                    </a> -->
+                </div>
+
+                <div class="med-free-card">
+                    <div class="med-free-label">Подарок от Сурии</div>
+                    <div class="med-free-figure">
+                        <img src="assets/images/meditations-images/awakening-of-femininity-meditation-free-image.jpg"
+                            alt="Нежный образ Сурии в женственной энергии" class="med-free-image">
+                    </div>
+                    <p class="med-free-quote">
+                        «Позволь себе быть мягкой, не теряя силы. Женственность — это не слабость, а глубокое доверие
+                        жизни.»
+                    </p>
+
+                    <audio controls preload="none" class="med-free-audio">
+                        <source src="assets/audio/wish-fulfillment-meditation-audio.mp3" type="audio/mpeg">
+                        Ваш браузер не поддерживает воспроизведение аудио.
+                    </audio>
+
+                </div>
+            </div>
+        </section>
+
         <!-- Пакеты медитаций -->
         <!-- Секция 1: Пакеты -->
         <section id="packs" class="med-packs">
