--- a/meditations.html
+++ b/meditations.html
@@ -143,7 +143,7 @@
                             </a>
                         </article>
 
-                        <!-- Пакет: Защита рода + Очищение от негатива + Баланс энергии -->
+                        <!-- Пакет: Защита рода + Освободи голову и тело + Баланс энергии -->
                         <article class="med-card med-card--package">
                             <div class="med-card-tag">Набор медитаций</div>
                             <figure class="med-card-figure">
@@ -155,7 +155,7 @@
                                 Комплект для тех, кто много сталкивается с чужими эмоциями и нагрузкой. Включает
                                 медитации
                                 «Защита рода»,
-                                «Очищение от негатива» и «Баланс энергии». Помогает не втягиваться в чужие состояния,
+                                «Освободи голову и тело» и «Баланс энергии». Помогает не втягиваться в чужие состояния,
                                 очищаться от налипшего
                                 негатива и мягко восстанавливать силы после тяжёлых периодов.
                             </p>
@@ -283,31 +283,32 @@
                         </figure>
                         <h3 class="med-card-title">Баланс энергии</h3>
                         <p class="med-card-text">
-                            После чисток или тяжёлых дней может быть ощущение пустоты, будто всё убрали, но сил нет.
-                            Медитация помогает
-                            вернуть свою энергию, собрать её обратно и почувствовать устойчивость. С каждым
-                            прослушиванием возвращаются
-                            спокойствие, уверенность и ощущение, что вы снова «в себе».
+                            Гармонизация своей энергии
+                            Когда убрали чужое нужно вернуть своё. Чтобы не ходить, как пустая оболочка. Чтобы не трясло
+                            от любого замечания. Чтобы вернулась к себе в свою энергию в свою опору.
+
                         </p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
                     </article>
 
-                    <!-- Очищение от негатива -->
+                    <!-- Освободи голову и тело -->
                     <article class="med-card">
                         <figure class="med-card-figure">
                             <img src="assets/images/med-cleansing.jpg"
                                 alt="Медитация для очищения от негатива и тяжёлых эмоций других людей"
                                 class="med-card-image">
                         </figure>
-                        <h3 class="med-card-title">Очищение от негатива</h3>
+                        <h3 class="med-card-title">Освободи голову и тело</h3>
                         <p class="med-card-text">
-                            Чтобы снять с себя чужую энергию: зависть, косые взгляды, обиды, злость и тяжесть после
-                            общения с
-                            токсичными людьми. После прослушивания ощущается, будто с души сняли слой грязи: дыхание
-                            становится
-                            свободнее, тело расслабляется, внутри — тишина и покой.
+                            Сброс перегруза: освободи голову и тело
+
+                            Представь: вечер, ты наконец дома. Снимаешь обувь, падаешь на диван и вдруг понимаешь, что
+                            внутри всё ещё напряжено. Плечи как деревянные, в голове крутится весь день, а в груди
+                            тяжёлый комок. Знакомо до боли, правда? Приходишь вечером домой и внутри всё кипит или,
+                            наоборот, как будто батарейка на нуле.
+
                         </p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
@@ -333,19 +334,17 @@
                         </a>
                     </article>
 
-                    <!-- Призыв новой любви -->
+                    <!-- Исполнение желания -->
                     <article class="med-card">
                         <figure class="med-card-figure">
                             <img src="assets/images/med-new-love.jpg"
                                 alt="Медитация для открытия сердца и притяжения новой любви" class="med-card-image">
                         </figure>
-                        <h3 class="med-card-title">Призыв новой любви</h3>
+                        <h3 class="med-card-title">Исполнение желания</h3>
                         <p class="med-card-text">
-                            Помогает мягко открыть сердце для новых отношений и пригласить в жизнь партнёра в резонансе
-                            с вами.
-                            После прослушивания появляется лёгкость, внутренняя уверенность и готовность к встрече.
-                            Именно в этом
-                            состоянии притягивается настоящая любовь.
+                            Эта медитация направлена на работу с конкретным желанием.
+                            Ты выбираешь чёткий запрос, в любой сфере жизни, и через медитативное состояние выстраиваешь
+                            с ним внутренний контакт.
                         </p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
