--- a/meditations.html
+++ b/meditations.html
@@ -199,7 +199,7 @@
                 <div class="med-card-grid">
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-anxiety.jpg"
+                            <img src="assets/images/meditations-images/letting-go-of-anxious-thoughts-meditation-image.jpg"
                                 alt="Мягкая медитация для успокоения тревоги и навязчивых мыслей"
                                 class="med-card-image">
                         </figure>
@@ -220,7 +220,7 @@
                     <!-- Отпускаю контроль -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-control.jpg"
+                            <img src="assets/images/meditations-images/letting-go-of-control-meditation-image.jpg"
                                 alt="Медитация для отпускания контроля и тревоги о будущем" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Отпускаю контроль</h3>
@@ -240,7 +240,7 @@
                     <!-- Опора внутри меня (как одиночная версия, если продаётся отдельно) -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-inner-support.jpg"
+                            <img src="assets/images/meditations-images/inner-support-meditation-image.jpg"
                                 alt="Медитация для возвращения внутренней опоры и уверенности" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Опора внутри меня</h3>
@@ -259,8 +259,8 @@
                     <!-- Защита рода -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-ancestral.jpg" alt="Медитация для включения родовой защиты"
-                                class="med-card-image">
+                            <img src="assets/images/meditations-images/family-protection-meditation-image.jpg"
+                                alt="Медитация для включения родовой защиты" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Защита рода</h3>
                         <p class="med-card-text">
@@ -278,8 +278,8 @@
                     <!-- Баланс энергии -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-balance.jpg" alt="Медитация для восстановления баланса энергии"
-                                class="med-card-image">
+                            <img src="assets/images/meditations-images/energy-balance-meditation-image.jpg"
+                                alt="Медитация для восстановления баланса энергии" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Баланс энергии</h3>
                         <p class="med-card-text">
@@ -296,7 +296,7 @@
                     <!-- Освободи голову и тело -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-cleansing.jpg"
+                            <img src="assets/images/meditations-images/free-mind-and-body-meditation-image.jpg"
                                 alt="Медитация для очищения от негатива и тяжёлых эмоций других людей"
                                 class="med-card-image">
                         </figure>
@@ -318,7 +318,7 @@
                     <!-- Разрыв кармической связи -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-cut-cords.jpg"
+                            <img src="assets/images/meditations-images/breaking-karmic-ties-meditation-image.jpg"
                                 alt="Медитация для разрыва болезненной кармической связи" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Разрыв кармической связи</h3>
@@ -337,7 +337,7 @@
                     <!-- Исполнение желания -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-new-love.jpg"
+                            <img src="assets/images/meditations-images/wish-fulfillment-meditation-image.jpg"
                                 alt="Медитация для открытия сердца и притяжения новой любви" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Исполнение желания</h3>
@@ -354,7 +354,7 @@
                     <!-- Гармония внутри себя -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-harmony.jpg"
+                            <img src="assets/images/meditations-images/harmony-inside-me-meditation-image.jpg"
                                 alt="Медитация для восстановления внутренней гармонии" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Гармония внутри себя</h3>
@@ -373,8 +373,8 @@
                     <!-- Отпустить боль прошлого -->
                     <article class="med-card">
                         <figure class="med-card-figure">
-                            <img src="assets/images/med-past.jpg" alt="Медитация для отпускания боли прошлого и обид"
-                                class="med-card-image">
+                            <img src="assets/images/meditations-images/let-go-of-the-pain-from-the-past-meditation-image.jpg"
+                                alt="Медитация для отпускания боли прошлого и обид" class="med-card-image">
                         </figure>
                         <h3 class="med-card-title">Отпустить боль прошлого</h3>
                         <p class="med-card-text">
