--- a/meditations.html
+++ b/meditations.html
@@ -39,8 +39,8 @@
             <div class="logo">Стук сердца</div>
             <nav class="med-nav">
                 <a href="index.html#top">Главная</a>
-                <a href="index.html#products">Продукты</a>
-                <a href="#pack-list">Медитации</a>
+                <a href="#packs-list">packs</a>
+                <a href="#meditations-list">packs</a>
                 <a href="#contact">Контакт</a>
             </nav>
         </div>
@@ -110,7 +110,7 @@
 
         <!-- Пакеты медитаций -->
         <!-- Секция 1: Пакеты -->
-        <section id="packs" class="med-packs">
+        <section id="packs-list" class="med-packs">
             <div class="container">
                 <h2 class="section-title">Наборы медитаций</h2>
                 <p class="med-section-intro">
@@ -138,6 +138,8 @@
                                 чувство, что вы
                                 снова твёрдо стоите на ногах.
                             </p>
+
+                            <p class="med-card-price">7 000 ₽</p>
                             <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                                 Оформить набор
                             </a>
@@ -159,6 +161,7 @@
                                 очищаться от налипшего
                                 негатива и мягко восстанавливать силы после тяжёлых периодов.
                             </p>
+                            <p class="med-card-price">7 000 ₽</p>
                             <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                                 Получить комплект
                             </a>
@@ -180,6 +183,7 @@
                                 освободиться от
                                 болезненной привязки и открыть сердце для отношений в резонансе с вами.
                             </p>
+                            <p class="med-card-price">7 000 ₽</p>
                             <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                                 Заказать набор
                             </a>
@@ -188,7 +192,7 @@
                 </div>
         </section>
         <!-- Секция 2: Отдельные медитации -->
-        <section id="meditations" class="med-packs med-packs--single">
+        <section id="meditations-list" class="med-packs med-packs--single">
             <div class="container">
                 <h2 class="section-title">Отдельные медитации</h2>
                 <p class="med-section-intro">
@@ -212,6 +216,7 @@
                             внутри становится тише, отпускает напряжение, и вы перестаёте мучить себя бесконечными
                             мыслями.
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -232,6 +237,7 @@
                             После прослушивания мысли стихает, приходит спокойствие и ощущение присутствия «здесь и
                             сейчас».
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -251,6 +257,7 @@
                             пустоты, появляется
                             спокойствие и чувство, что вы можете положиться на себя.
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -270,6 +277,7 @@
                             втягиваться в чужие эмоции,
                             не забирать на себя негатив и чувствовать за спиной силу рода.
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -288,6 +296,7 @@
                             от любого замечания. Чтобы вернулась к себе в свою энергию в свою опору.
 
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -310,6 +319,7 @@
                             наоборот, как будто батарейка на нуле.
 
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -329,6 +339,7 @@
                             навязчивая тяга
                             и появляется ощущение внутренней свободы и лёгкости.
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -346,6 +357,7 @@
                             Ты выбираешь чёткий запрос, в любой сфере жизни, и через медитативное состояние выстраиваешь
                             с ним внутренний контакт.
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -365,6 +377,7 @@
                             состоянии часто
                             возвращаются бывшие, потому что ваша энергия снова звучит уверенно и ярко.
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
@@ -384,6 +397,7 @@
                             ощущение
                             внутреннего спокойствия и возможности двигаться дальше.
                         </p>
+                        <p class="med-card-price">3 000 ₽</p>
                         <a href="https://t.me/sofiya1203" target="_blank" rel="noopener" class="med-card-link">
                             Получить медитацию
                         </a>
