--- a/meditations.html
+++ b/meditations.html
@@ -40,7 +40,7 @@
             <nav class="med-nav">
                 <a href="index.html#top">Главная</a>
                 <a href="#packs-list">packs</a>
-                <a href="#meditations-list">packs</a>
+                <a href="#meditations-list">Медитации</a>
                 <a href="#contact">Контакт</a>
             </nav>
         </div>
