--- a/diagnostics.html
+++ b/diagnostics.html
@@ -5,11 +5,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Диагностики Сурии — расклады «Я и мой путь», отношения и самореализация | Стук сердца</title>
-    <meta name="description"
-        content="Глубокие диагностики от Сурии: «Я и мой путь», «Что со мной происходит?», отношения, одиночество, самореализация и диагностика после медитаций. Расклады с бережной энергочисткой.">
-    <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
+    <!-- Basic SEO -->
+    <title>Диагностики Сурии — расклады на путь, отношения, негатив и самореализацию | Стук сердца</title>
 
+    <meta name="description"
+        content="Диагностики от Сурии: «Я и мой путь», «Что со мной происходит?», отношения, одиночество, самореализация, магический негатив и углублённая диагностика поля. Бережные расклады с энергочисткой.">
+
+    <meta name="author" content="Сурия, энергетический практик и таро-терапевт">
+    <meta name="keywords"
+        content="диагностика таро, диагностика отношений, диагностика самореализации, диагностика магического негатива, углублённая диагностика негатива, энергетическая диагностика, Сурия, Стук сердца">
+
+    <!-- Open Graph (social preview) -->
+    <meta property="og:title" content="Диагностики Сурии — путь, отношения, негатив и самореализация">
+    <meta property="og:description"
+        content="Глубокие расклады Таро с энергочисткой: понимание своего пути, состояний, отношений, причин одиночества, влияния негатива и блоков в самореализации. Выберите формат диагностики под свой запрос.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://iuliiakonovalova.github.io/stukserdza/diagnostics.html">
+    <meta property="og:image"
+        content="https://iuliiakonovalova.github.io/stukserdza/images/suria-diagnostics-preview.jpg">
+    <meta property="og:locale" content="ru_RU">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="assets/css/diagnostics.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
