Add vk contact to social

--- a/index.html
+++ b/index.html
@@ -360,6 +360,13 @@
                             <div class="social-handle">@_the_sun_tarot</div>
                         </div>
                     </a>
+                    <a class="social-card" href="https://vk.ru/stukserdzavk" target="_blank" rel="noopener">
+                        <div class="social-icon">VK</div>
+                        <div>
+                            <div class="social-label">ВКонтакте</div>
+                            <div class="social-handle">Стук сердца</div>
+                        </div>
+                    </a>
                     <a class="social-card" href="https://www.tiktok.com/@truesuria" target="_blank" rel="noopener">
                         <div class="social-icon">TT</div>
                         <div>
