--- a/index.html
+++ b/index.html
@@ -403,9 +403,20 @@
                         <div class="social-sofia">
                             <strong>@sofiya1203</strong>
                         </div>
+                    </a>
 
+                    <p style="margin-top: 16px; opacity: 0.9; font-size: 0.95rem;">
+                        Или напишите Мари в ВКонтакте:
+                    </p>
+                    <a class="contact-highlight" href="http://vk.me/stukserdzavk" target="_blank" rel="noopener"
+                        style="margin-top: 8px;">
+                        ВКонтакте для связи:
+                        <div class="social-sofia">
+                            <strong>Мари (Стук сердца)</strong>
+                        </div>
                     </a>
                 </div>
+
                 <div>
                     <form action="https://formspree.io/f/mgowdgyd" method="POST">
                         <div>
