Change intro text

--- a/meditations.html
+++ b/meditations.html
@@ -54,8 +54,8 @@
                     <p class="med-hero-badge">Аудио-практики для души</p>
                     <h1 class="med-hero-title">Медитации Сурии</h1>
                     <p class="med-hero-subtitle">
-                        Проводниковые медитации, которые помогают прожить боль, отпустить прошлое и вернуть себе опору
-                        изнутри.
+                        Это специально созданные аудио, направленные на работу с подсознанием. Они помогут вам отпустить
+                        обиды, вернуть бывшего или встретить нового мужчину.
                     </p>
                     <a href="#pack-list" class="btn-primary">Выбрать медитацию</a>
                 </div>
